add table with sourserings item display.

--- a/src/App.css
+++ b/src/App.css
@@ -43,3 +43,12 @@ section {
   max-width: 800px;
   margin: 50px auto;
 }
+.sourcerings {
+  text-align: left;
+  max-width: 800px;
+  margin: 0 auto;
+  border: 1px lightgray solid;
+}
+.sourcerings td{
+  border: 1px lightgray solid;
+}
